# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.140 2005/04/13 18:37:44 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  13 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Moved 'end >= device_sectors' check out of loop to check for next partition's
  start point (thanks to Marco Djukic). Fix >4 primary partitions on non-x86.
  Partitioning code now tracks start/end of extended for placing logicals.

  11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Finish overhaul of backend partitioning code. Fixed all bugs that stood in
  the way of partitioning from a blank disk. Add int() around access to minor
  key in partition information due to new partition code leaving them as float.

  10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  tidy_partitions() function in GLIStorageDevice. Tweaks to tidy code

  9 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Major GLIStorageDevice overhaul...all MB now instead of sectors.

  8 Apr 2005; Scott Myron <samyron@gentoo.org>
  Added support for DHCP options and MAC addresses in the InstallProfile.

  3 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed mountopts check to work for blank and whitespace. Pipe emerge through
  sed to properly strip out junk.

  2 Apr 2005; Preston Cody <codeman@gentoo.org>
  fixed the way set_timezone works.  added hotplug/coldplug for livecd-kernel
  added --emptytree to stage2. fixed ethx not being added to runlevel defalt.
  
  31 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixed indent problem in GLICController
  
  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Check for disklabel type "loop" and use the device name without a minor.

  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Remove /tmp/compile_output.log and /var/log/install.log when install is
  complete. Added code to (hopefully) keep 2nd thread running after install.