@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.140 2005/04/13 18:37:44 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.141 2005/04/13 19:00:23 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   13 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Moved 'end >= device_sectors' check out of loop to check for next partition's
   start point (thanks to Marco Djukic). Fix >4 primary partitions on non-x86.
-  Partitioning code now tracks start/end of extended for placing logicals.
+  Partitioning code now tracks start/end of extended for placing logicals. End
+  point of logical is now adjusted along with start.
 
   11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Finish overhaul of backend partitioning code. Fixed all bugs that stood in
